--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <h2>Routes:</h2>
 
     <p><span>Get /api/users</span> - Returns all users from the database</p>
+    <p><span>Get /api/users/{user_id}</span> - Get user by ID from the database</p>
     <p><span>Post /api/users</span> {JSON Object that includes username, email and password} - Add users to the database</p>
 </body>
 </html>
