--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="text-center">User App API</h1>
-    <p class="text-center">Welcome to out API! You'll find the usage instructions below</p>
+    <p class="text-center">Welcome to our API! You'll find the usage instructions below</p>
 
     <h2>Routes:</h2>
 
